tests/baselines/reference/interfaceThatIndirectlyInheritsFromItself.errors.txt
tests/cases/conformance/interfaces/interfaceDeclarations/interfaceThatIndirectlyInheritsFromItself.ts(1,11): error TS2310: Type 'Base' recursively references itself as a base type.
tests/cases/conformance/interfaces/interfaceDeclarations/interfaceThatIndirectlyInheritsFromItself.ts(14,15): error TS2310: Type 'Base<T>' recursively references itself as a base type.


==== tests/cases/conformance/interfaces/interfaceDeclarations/interfaceThatIndirectlyInheritsFromItself.ts (2 errors) ====
    interface Base extends Derived2 { // error
              ~~~~
!!! error TS2310: Type 'Base' recursively references itself as a base type.
        x: string;
    }
    
    interface Derived extends Base {
        y: string;
    }
    
    interface Derived2 extends Derived {
        z: string;
    }
    
    module Generic {
        interface Base<T> extends Derived2<T> { // error
                  ~~~~
!!! error TS2310: Type 'Base<T>' recursively references itself as a base type.
            x: string;
        }
    
        interface Derived<T> extends Base<T> {
            y: string;
        }
    
        interface Derived2<T> extends Derived<T> {
            z: string;
        }
    }